i18n with messages added

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,3 +2,32 @@ product.name=Name
 product.price=Price
 product.volume=Volume
 product.quantity=Left, pc
+page.cart=Cart
+page.shop=Shop
+button.confirm_order=Confirm order
+button.alcoholic=Alcoholic
+button.nonalcoholic=NonAlcoholic
+button.all=All
+product.isalc=Alc?
+product.edit=Edit
+product.delete=Delete
+product.type=Type
+product.ABV=ABV
+product.composition=Composition
+product.save=Save
+notenoughmessage=Sorry, we don't have enough items in our store, you can edit your order or come tomorrow, we are refilling our store every day. Thank you for understanding
+tomainpage=To main page
+notenoughtitle=Sorry, we don't have enough items
+add-contact-title=Add contact information
+add-contact-first=Thank you for order in our shop, your order number is 
+add-contact-second=. Please leave us your contacts and shipping info in the field below
+product.toCart=Add to cart
+button.add-contact=S e n d
+shop.gotoCart=Go to cart
+message.ordered=Totally ordered 
+message.items= items
+message.fullprice=Full price: 
+shoppingbag=Shopping bag
+to-shop=To shop
+to-drinks-management=To drinks management
+
