--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,7 +1,7 @@
 product.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
 product.price=\u0426\u0435\u043D\u0430
 product.volume=\u041E\u0431\u044C\u0435\u043C
-product.quantity=\u041D\u0430\u043B\u0438\u0447\u0438\u0435, \u0448\u0442
+product.quantity=\u041D\u0430\u043B\u0438\u0447, \u0448\u0442
 page.cart=\u041A\u043E\u0440\u0437\u0438\u043D\u0430
 page.shop=\u041C\u0430\u0433\u0430\u0437\u0438\u043D
 button.confirm_order=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C
@@ -9,8 +9,8 @@ button.alcoholic=\u0410\u043B\u043A\u043E\u0433\u043E\u043B\u044C\u043D\u044B\u0
 button.nonalcoholic=\u0411\u0435\u0437\u0430\u043B\u043A\u043E\u0433\u043E\u043B\u044C\u043D\u044B\u0435
 button.all=\u0412\u0441\u0435
 product.isalc=\u0410\u043B\u043A?
-product.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
-product.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+product.edit=\u0420\u0435\u0434\u0430\u043A.
+product.delete=\u0423\u0434\u0430\u043B.
 product.type=\u0422\u0438\u043F
 product.ABV=\u041A\u0440\u0435\u043F\u043E\u0441\u0442\u044C
 product.composition=\u0421\u043E\u0441\u0442\u0430\u0432
@@ -30,4 +30,10 @@ message.fullprice=\u041E\u0431\u0449\u0430\u044F \u0441\u0443\u043C\u043C\u0430:
 shoppingbag=\u041A\u043E\u0440\u0437\u0438\u043D\u0430
 to-shop=\u0412 \u043C\u0430\u0433\u0430\u0437\u0438\u043D
 to-drinks-management=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0442\u043E\u0432\u0430\u0440\u044B
+button.createnewdrink=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u044B\u0439
+searchfield=\u041F\u043E\u0438\u0441\u043A..
+alc=\u0410\u043B\u043A
+non=\u0411\u0435\u0437
+alcoholic=\u0410\u043B\u043A\u043E\u0433\u043E\u043B\u044C\u043D\u044B\u0439
+nonalcoholic=\u0411\u0435\u0437\u0430\u043B\u043A\u043E\u0433\u043E\u043B\u044C\u043D\u044B\u0439
 
