redundant files and lines deleted, added some tests, cosmetic changes.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,14 +19,14 @@ notenoughmessage=Sorry, we don't have enough items in our store, you can edit yo
 tomainpage=To main page
 notenoughtitle=Sorry, we don't have enough items
 add-contact-title=Add contact information
-add-contact-first=Thank you for order in our shop, your order number is 
+add-contact-first=Thank you for order in our shop, your order number is
 add-contact-second=. Please leave us your contacts and shipping info in the field below
 product.toCart=Add to cart
 button.add-contact=S e n d
 shop.gotoCart=Go to cart
-message.ordered=Totally ordered 
+message.ordered=Totally ordered
 message.items= items
-message.fullprice=Full price: 
+message.fullprice=Full price:
 shoppingbag=Shopping bag
 to-shop=To shop
 to-drinks-management=To drinks management
@@ -36,3 +36,5 @@ alc=Alc
 non=Non
 alcoholic=Alcoholic
 nonalcoholic=Nonalcoholic
+page.notfound.start=The page you requested is not available. You might try returning to the
+home.page=home page
