JasperReport added to html. Class formatting (deleted excessive spaces and added missing)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,7 +25,7 @@ product.toCart=Add to cart
 button.add-contact=S e n d
 shop.gotoCart=Go to cart
 message.ordered=Totally ordered
-message.items= items
+message.items=items
 message.fullprice=Full price:
 shoppingbag=Shopping bag
 to-shop=To shop
@@ -38,3 +38,5 @@ alcoholic=Alcoholic
 nonalcoholic=Nonalcoholic
 page.notfound.start=The page you requested is not available. You might try returning to the
 home.page=home page
+button.show-report=Show PDF report
+button.save-report=Save PDF report
